@@ -9,7 +9,7 @@ BEGIN {
 use strict;
 use warnings FATAL => 'all';
 use English qw(-no_match_vars);
-use Test::More tests => 2;
+use Test::More tests => 3;
 
 use MaatkitTest;
 
@@ -27,6 +27,17 @@ like(
    $output,
    qr/--group-by\s+fingerprint/,
    "Default --group-by with --no-report"
+);
+
+# #############################################################################
+# Issue 984: --order-by breaks the Query_time distribution graph
+# #############################################################################
+ok(
+   no_diff(
+      "$trunk/mk-query-digest/mk-query-digest --report-format=query_report $trunk/common/t/samples/slow006.txt --order-by Rows_examined",
+      "mk-query-digest/t/samples/slow006-order-by-re.txt",
+   ),
+   "--group-by does not change distro chart (issue 984)"
 );
 
 # #############################################################################
