@@ -1,0 +1,58 @@
+
+# Query 1: 0.05 QPS, 0x concurrency, ID 0xA20C29AF174CE545 at byte 1803 __
+# This item is included in the report because it matches --limit.
+#              pct   total     min     max     avg     95%  stddev  median
+# Count         50       3
+# Exec time     50    36us    12us    12us    12us    12us       0    12us
+# Lock time      0       0       0       0       0       0       0       0
+# Rows sent      0       0       0       0       0       0       0       0
+# Rows exam      0       0       0       0       0       0       0       0
+# Users                  1 [SQL_SLAVE]
+# Hosts                  1
+# Databases              1     foo
+# Time range 2007-12-18 11:48:27 to 2007-12-18 11:49:30
+# bytes         50      69      23      23      23      23       0      23
+# Merge pas      0       0       0       0       0       0       0       0
+# Query_time distribution
+#   1us
+#  10us  ################################################################
+# 100us
+#   1ms
+#  10ms
+# 100ms
+#    1s
+#  10s+
+# Tables
+#    SHOW TABLE STATUS FROM `foo` LIKE 'foo_tbl'\G
+#    SHOW CREATE TABLE `foo`.`foo_tbl`\G
+# EXPLAIN
+SELECT col FROM foo_tbl\G
+
+# Query 2: 0.30 QPS, 0x concurrency, ID 0xD4CD74934382A184 at byte 1445 __
+# This item is included in the report because it matches --limit.
+#              pct   total     min     max     avg     95%  stddev  median
+# Count         50       3
+# Exec time     50    36us    12us    12us    12us    12us       0    12us
+# Lock time      0       0       0       0       0       0       0       0
+# Rows sent      0       0       0       0       0       0       0       0
+# Rows exam      0       0       0       0       0       0       0       0
+# Users                  1 [SQL_SLAVE]
+# Hosts                  1
+# Databases              1     bar
+# Time range 2007-12-18 11:48:57 to 2007-12-18 11:49:07
+# bytes         50      69      23      23      23      23       0      23
+# Merge pas      0       0       0       0       0       0       0       0
+# Query_time distribution
+#   1us
+#  10us  ################################################################
+# 100us
+#   1ms
+#  10ms
+# 100ms
+#    1s
+#  10s+
+# Tables
+#    SHOW TABLE STATUS FROM `bar` LIKE 'bar_tbl'\G
+#    SHOW CREATE TABLE `bar`.`bar_tbl`\G
+# EXPLAIN
+SELECT col FROM bar_tbl\G
